[gd_scene load_steps=4 format=3 uid="uid://bsi4p76278pfr"]

[ext_resource type="Texture2D" path="res://menu/background/smoke_background.tres" id="1"]
[ext_resource type="Theme" uid="uid://bm3863jt2yyup" path="res://themes/menu_theme.tres" id="2"]
[ext_resource type="Script" path="res://menu/main_menu/main_menu.gd" id="8"]

[node name="main_menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2")
script = ExtResource("8")

[node name="background" type="TextureRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.000244141
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("1")
expand_mode = 1

[node name="center_container" type="CenterContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.000244141
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="v_box_container" type="VBoxContainer" parent="center_container"]
layout_mode = 2
theme = ExtResource("2")
alignment = 1

[node name="continue_button" type="Button" parent="center_container/v_box_container"]
layout_mode = 2
focus_neighbor_top = NodePath("../quit_button")
focus_neighbor_bottom = NodePath("../new_button")
focus_next = NodePath("../new_button")
focus_previous = NodePath("../quit_button")
theme = ExtResource("2")
text = "Continue"
flat = true

[node name="new_button" type="Button" parent="center_container/v_box_container"]
layout_mode = 2
size_flags_vertical = 3
focus_next = NodePath("../load_button")
focus_previous = NodePath("../continue_button")
theme = ExtResource("2")
text = "New Game"
flat = true

[node name="load_button" type="Button" parent="center_container/v_box_container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2")
text = "Load Game"
flat = true

[node name="options_button" type="Button" parent="center_container/v_box_container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2")
text = "Options"
flat = true

[node name="quit_button" type="Button" parent="center_container/v_box_container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2")
text = "Quit"
flat = true

[node name="load_popup" type="Popup" parent="."]

[node name="layout" type="VBoxContainer" parent="load_popup"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="save_list" type="ItemList" parent="load_popup/layout"]
layout_mode = 2
size_flags_vertical = 3

[node name="load_save_button" type="Button" parent="load_popup/layout"]
layout_mode = 2
text = "Load"

[connection signal="pressed" from="center_container/v_box_container/continue_button" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="center_container/v_box_container/new_button" to="." method="_on_new_button_pressed"]
[connection signal="pressed" from="center_container/v_box_container/load_button" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="center_container/v_box_container/options_button" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="center_container/v_box_container/quit_button" to="." method="_on_quit_button_pressed"]
[connection signal="item_activated" from="load_popup/layout/save_list" to="." method="_on_save_list_item_activated"]
[connection signal="item_selected" from="load_popup/layout/save_list" to="." method="_on_save_list_item_selected"]
[connection signal="pressed" from="load_popup/layout/load_save_button" to="." method="_on_load_save_button_pressed"]
